<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".users.fragment.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/id_login_tittle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_big"
        android:textSize="@dimen/text_view_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tittle"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email:"
        app:layout_constraintStart_toStartOf="@id/entry_user_email"
        app:layout_constraintTop_toBottomOf="@id/id_login_tittle"
        android:layout_marginTop="@dimen/margin_big"
        android:textSize="@dimen/title_card_view"/>

    <EditText
        android:id="@+id/entry_user_email"
        android:layout_width="@dimen/ancho_inputs"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1"
        android:layout_marginTop="@dimen/margin_normal"
        android:inputType="textEmailAddress"
        />
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password:"
        app:layout_constraintStart_toStartOf="@id/entry_user_email"
        app:layout_constraintTop_toBottomOf="@id/entry_user_email"
        android:layout_marginTop="@dimen/margin_big"
        android:textSize="@dimen/title_card_view"
        />
    <EditText
        android:id="@+id/entry_user_password"
        android:layout_width="@dimen/ancho_inputs"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2"
        android:layout_marginTop="@dimen/margin_normal"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acept_button"
        app:layout_constraintTop_toBottomOf="@id/entry_user_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_big"/>

    <TextView
        android:id="@+id/dont_have_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/already_account"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/title_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>