<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".users.fragment.SingUpFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/id_singup_tittle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_big"
        android:textSize="@dimen/text_view_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_tittle"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/text0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name:"
        app:layout_constraintStart_toStartOf="@id/entry_register_name"
        app:layout_constraintTop_toBottomOf="@id/id_singup_tittle"
        android:layout_marginTop="@dimen/margin_big"
        android:textSize="@dimen/title_card_view"
        android:inputType="text"/>

    <EditText
        android:id="@+id/entry_register_name"
        android:layout_width="@dimen/ancho_inputs"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text0"
        android:layout_marginTop="@dimen/margin_normal"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email:"
        app:layout_constraintStart_toStartOf="@id/entry_register_email"
        app:layout_constraintTop_toBottomOf="@id/entry_register_name"
        android:layout_marginTop="@dimen/margin_big"
        android:textSize="@dimen/title_card_view"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/entry_register_email"
        android:layout_width="@dimen/ancho_inputs"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1"
        android:layout_marginTop="@dimen/margin_normal"
        android:inputType="textEmailAddress"
        />
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password:"
        app:layout_constraintStart_toStartOf="@id/entry_register_name"
        app:layout_constraintTop_toBottomOf="@id/entry_register_email"
        android:layout_marginTop="@dimen/margin_big"
        android:textSize="@dimen/title_card_view"

        />
    <EditText
        android:id="@+id/entry_register_password"
        android:layout_width="@dimen/ancho_inputs"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2"
        android:layout_marginTop="@dimen/margin_normal"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/singup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acept_button"
        app:layout_constraintTop_toBottomOf="@id/entry_register_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_big"/>

    <TextView
        android:id="@+id/i_have_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/yet_account"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/title_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/singup_button" />

</androidx.constraintlayout.widget.ConstraintLayout>